--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="genre">Жанры</string>
     <string name="textview">TextView</string>
     <string name="main_title">Главная</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pic">Pic</string>
 </resources>
