--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="textview">TextView</string>
     <string name="main_title">Главная</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="pic">Pic</string>
+    <string name="pic">pic</string>
+    <string name="pic1">film1pic</string>
+    <string name="pic2">film2pic</string>
 </resources>
